커핀그루나루 2일차

--- a/css/reset.css
+++ b/css/reset.css
@@ -4,7 +4,7 @@
 ul, li{list-style: none;}
 a{text-decoration: none; color: inherit;}
 table{border-collapse: collapse;}
-img{vertical-align: middle;}
+img{vertical-align: bottom;}
 
 .clear_fix::before,
 .clear_fix::after{
